ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Query Integration
    • Fully Compatible
    • ALL
    • Hide

      Re-enable extensions_parameter_error_cases.js in aubsan variants by removing the incompatible_aubsan tag.

      Show
      Re-enable extensions_parameter_error_cases.js in aubsan variants by removing the incompatible_aubsan tag.
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      On aubsan variants, extensions_parameter_error_cases.js fails with memory leaks for the test cases that open the .so file but do not fully load the extension. I temporarily disabled that test from running on aubsan variants, and this ticket should investigate the memory leaks.

            Assignee:
            Alyssa Clark (Inactive)
            Reporter:
            Will Buerger
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: