SERVER-109351 Keep extension shared library object alive until shutdown even in error cases (#40337)

GitOrigin-RevId: cf5402ee8b6ec9f47084f40694e8228a24f2d0de